原版FSR2的OpenGL可用